Fix menu VS loader z-index and swap gallery artworks order

--- a/less/header.less
+++ b/less/header.less
@@ -8,7 +8,7 @@
 	position: fixed;
 	top: 0;
 	left: 0;
-	z-index: 1;
+	z-index: 21; /* In front of loader logo */
 	transition: top 150ms;
 
 	&.mobile-menu-open {
